# slinter

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: about.slint  upgrades.slint  window.slint
